import can list the symbols to be imported with wild cards